--- a/products-details.html
+++ b/products-details.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Product Details</title>
+    <title>SUGGESTMEE</title>
     <link rel="stylesheet" href="./style.css" />
     <link
       rel="stylesheet"
@@ -26,7 +26,7 @@
           <ul id="menuItems">
             <li><a href="index.html">Home</a></li>
             <li>
-              <a href="mailto:guide@gmail.com" target="_blank">Contact Us </a>
+              <a href="mailto:suggestme60@gmail.com?" target="_blank">Contact Us </a>
             </li>
           </ul>
         </nav>
