--- a/products-details1.html
+++ b/products-details1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Product Details</title>
+    <title>SUGGESTMEE</title>
     <link rel="stylesheet" href="./style.css" />
     <link
       rel="stylesheet"
@@ -25,7 +25,7 @@
         <nav>
           <ul id="menuItems">
             <li><a href="index.html">Home</a></li>
-            <li><a href="@gmail.com" target="_blank">Contact Us</a></li>
+            <li><a href="mailto:suggestme60@gmail.com?" target="_blank">Contact Us</a></li>
           </ul>
         </nav>
 
