--- a/products-details.html
+++ b/products-details.html
@@ -45,11 +45,11 @@
     <div class="small-container single-details">
       <div class="row">
         <div class="col-2">
-          <img src="./images/i3/gallery-1.jpg" width="100%" id="productImg" />
+          <img src="./images/I3/gallery-1.jpg" width="100%" id="productImg" />
           <div class="small-img-row">
             <div class="small-img-col">
               <img
-                src="./images/i3/gallery-1.jpg"
+                src="./images/I3/gallery-1.jpg"
                 width="100%"
                 alt=""
                 class="smallImg"
@@ -57,7 +57,7 @@
             </div>
             <div class="small-img-col">
               <img
-                src="./images/i3/gallery-2.jpg"
+                src="./images/I3/gallery-2.jpg"
                 width="100%"
                 alt=""
                 class="smallImg"
@@ -65,7 +65,7 @@
             </div>
             <div class="small-img-col">
               <img
-                src="./images/i3/gallery-3.jpg"
+                src="./images/I3/gallery-3.jpg"
                 width="100%"
                 alt=""
                 class="smallImg"
@@ -73,7 +73,7 @@
             </div>
             <div class="small-img-col">
               <img
-                src="./images/i3/gallery-4.jpg"
+                src="./images/I3/gallery-4.jpg"
                 width="100%"
                 alt=""
                 class="smallImg"
@@ -107,11 +107,11 @@
     <div class="small-container single-details">
       <div class="row">
         <div class="col-2">
-          <img src="./images/i3/gallery-5.jpg" width="100%" id="productImg1" />
+          <img src="./images/I3/gallery-5.jpg" width="100%" id="productImg1" />
           <div class="small-img-row">
             <div class="small-img-col">
               <img
-                src="./images/i3/gallery-5.jpg"
+                src="./images/I3/gallery-5.jpg"
                 width="100%"
                 alt=""
                 class="smallImg1"
@@ -119,7 +119,7 @@
             </div>
             <div class="small-img-col">
               <img
-                src="./images/i3/gallery-6.jpg"
+                src="./images/I3/gallery-6.jpg"
                 width="100%"
                 alt=""
                 class="smallImg1"
@@ -127,7 +127,7 @@
             </div>
             <div class="small-img-col">
               <img
-                src="./images/i3/gallery-7.jpg"
+                src="./images/I3/gallery-7.jpg"
                 width="100%"
                 alt=""
                 class="smallImg1"
@@ -135,7 +135,7 @@
             </div>
             <div class="small-img-col">
               <img
-                src="./images/i3/gallery-8.jpg"
+                src="./images/I3/gallery-8.jpg"
                 width="100%"
                 alt=""
                 class="smallImg1"
