--- a/products-details1.html
+++ b/products-details1.html
@@ -42,11 +42,11 @@
     <div class="small-container single-details">
       <div class="row">
         <div class="col-2">
-          <img src="./images/i5/gallery-9.jpg" width="100%" id="productImg3" />
+          <img src="./images/I5/gallery-9.jpg" width="100%" id="productImg3" />
           <div class="small-img-row">
             <div class="small-img-col">
               <img
-                src="./images/i5/gallery-9.jpg"
+                src="./images/I5/gallery-9.jpg"
                 width="100%"
                 alt=""
                 class="smallImg3"
@@ -54,7 +54,7 @@
             </div>
             <div class="small-img-col">
               <img
-                src="./images/i5/gallery-10.jpg"
+                src="./images/I5/gallery-10.jpg"
                 width="100%"
                 alt=""
                 class="smallImg3"
@@ -62,7 +62,7 @@
             </div>
             <div class="small-img-col">
               <img
-                src="./images/i5/gallery-11.jpg"
+                src="./images/I5/gallery-11.jpg"
                 width="100%"
                 alt=""
                 class="smallImg3"
@@ -70,7 +70,7 @@
             </div>
             <div class="small-img-col">
               <img
-                src="./images/i5/gallery-12.jpg"
+                src="./images/I5/gallery-12.jpg"
                 width="100%"
                 alt=""
                 class="smallImg3"
@@ -113,11 +113,11 @@
     <div class="small-container single-details">
       <div class="row">
         <div class="col-2">
-          <img src="./images/i5/gallery-5.jpg" width="100%" id="productImg2" />
+          <img src="./images/I5/gallery-5.jpg" width="100%" id="productImg2" />
           <div class="small-img-row">
             <div class="small-img-col">
               <img
-                src="./images/i5/gallery-5.jpg"
+                src="./images/I5/gallery-5.jpg"
                 width="100%"
                 alt=""
                 class="smallImg2"
@@ -125,7 +125,7 @@
             </div>
             <div class="small-img-col">
               <img
-                src="./images/i5/gallery-6.jpg"
+                src="./images/I5/gallery-6.jpg"
                 width="100%"
                 alt=""
                 class="smallImg2"
@@ -133,7 +133,7 @@
             </div>
             <div class="small-img-col">
               <img
-                src="./images/i5/gallery-7.jpg"
+                src="./images/I5/gallery-7.jpg"
                 width="100%"
                 alt=""
                 class="smallImg2"
@@ -141,7 +141,7 @@
             </div>
             <div class="small-img-col">
               <img
-                src="./images/i5/gallery-8.jpg"
+                src="./images/I5/gallery-8.jpg"
                 width="100%"
                 alt=""
                 class="smallImg2"
