--- a/products-details2.html
+++ b/products-details2.html
@@ -112,11 +112,11 @@
     <div class="small-container single-details">
       <div class="row">
         <div class="col-2">
-          <img src="./images/i7/gallery-5.jpg" width="100%" id="productImg2" />
+          <img src="./images/I7/gallery-5.jpg" width="100%" id="productImg2" />
           <div class="small-img-row">
             <div class="small-img-col">
               <img
-                src="./images/i7/gallery-5.jpg"
+                src="./images/I7/gallery-5.jpg"
                 width="100%"
                 alt=""
                 class="smallImg2"
@@ -124,7 +124,7 @@
             </div>
             <div class="small-img-col">
               <img
-                src="./images/i7/gallery-6.jpg"
+                src="./images/I7/gallery-6.jpg"
                 width="100%"
                 alt=""
                 class="smallImg2"
@@ -132,7 +132,7 @@
             </div>
             <div class="small-img-col">
               <img
-                src="./images/i7/gallery-7.jpg"
+                src="./images/I7/gallery-7.jpg"
                 width="100%"
                 alt=""
                 class="smallImg2"
@@ -140,7 +140,7 @@
             </div>
             <div class="small-img-col">
               <img
-                src="./images/i7/gallery-8.jpg"
+                src="./images/I7/gallery-8.jpg"
                 width="100%"
                 alt=""
                 class="smallImg2"
