--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
           <div class="col-4">
             <a href="products-details1.html">
               <img src="./images/product-2.png" alt="" />
-              <h4>PROGRAMMING Laptops</h4>
+              <h4>Programming Laptops</h4>
             </a>
           </div>
           <div class="col-4">
             <a href="products-details2.html">
               <img src="./images/product-3.png" alt="" />
-              <h4>GAMING Laptops</h4>
+              <h4>Gaming Laptops</h4>
             </a>
           </div>
         </div>
