--- a/products-details1.html
+++ b/products-details1.html
@@ -180,11 +180,11 @@
     <div class="small-container single-details">
       <div class="row">
         <div class="col-2">
-          <img src="./images/i5/gallery-1.jpg" width="100%" id="productImg" />
+          <img src="./images/I5/gallery-1.jpg" width="100%" id="productImg" />
           <div class="small-img-row">
             <div class="small-img-col">
               <img
-                src="./images/i5/gallery-1.jpg"
+                src="./images/I5/gallery-1.jpg"
                 width="100%"
                 alt=""
                 class="smallImg"
@@ -192,7 +192,7 @@
             </div>
             <div class="small-img-col">
               <img
-                src="./images/i5/gallery-2.jpg"
+                src="./images/I5/gallery-2.jpg"
                 width="100%"
                 alt=""
                 class="smallImg"
@@ -200,7 +200,7 @@
             </div>
             <div class="small-img-col">
               <img
-                src="./images/i5/gallery-3.jpg"
+                src="./images/I5/gallery-3.jpg"
                 width="100%"
                 alt=""
                 class="smallImg"
@@ -208,7 +208,7 @@
             </div>
             <div class="small-img-col">
               <img
-                src="./images/i5/gallery-4.jpg"
+                src="./images/I5/gallery-4.jpg"
                 width="100%"
                 alt=""
                 class="smallImg"
