--- a/Gamming Laptops.html
+++ b/Gamming Laptops.html
@@ -18,13 +18,13 @@
     <div class="container">
       <div class="navbar">
         <div class="logo">
-          <a href="index.html"
+          <a href="Home.html"
             ><img src="./images/logo.png" alt="" width="125px"
           /></a>
         </div>
         <nav>
           <ul id="menuItems">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="Home.html">Home</a></li>
             <li><a href="mailto:suggestme60@gmail.com?" target="_blank">Contact Us</a></li>
           </ul>
         </nav>
