--- a/Home.html
+++ b/Home.html
@@ -18,13 +18,13 @@
       <div class="container">
         <div class="navbar">
           <div class="logo">
-            <a href="index.html"
+            <a href="Home.html"
               ><img src="./images/logo.png" alt="" width="125px"
             /></a>
           </div>
           <nav>
             <ul id="menuItems">
-              <li><a href="index.html">Home</a></li>
+              <li><a href="Home.html">Home</a></li>
               <li>
                 <a href="mailto:suggestme60@gmail.com?" target="_blank">Contact Us</a>
               </li>
@@ -76,19 +76,19 @@
         <h2 class="title">Featured Products</h2>
         <div class="row">
           <div class="col-4">
-            <a href="products-details.html">
+            <a href="Basic Use Laptops.html">
               <img src="./images/product-1.jpg" alt="" />
               <h4>Basic Use Laptops</h4>
             </a>
           </div>
           <div class="col-4">
-            <a href="products-details1.html">
+            <a href="Programming Laptops.html">
               <img src="./images/product-2.png" alt="" />
               <h4>Programming Laptops</h4>
             </a>
           </div>
           <div class="col-4">
-            <a href="products-details2.html">
+            <a href="Gamming Laptops.html">
               <img src="./images/product-3.png" alt="" />
               <h4>Gaming Laptops</h4>
             </a>
