--- a/Gamming Laptops.html
+++ b/Gamming Laptops.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SUGGESTMEE</title>
+    <meta name = "keywords" content = "Computers & Electronics, Laptops, Dell XPS, Acer Predator Triton 300 SE, Alienware, Apple MacBook Air,Lenovo ThinkPad X1 Carbon Gen 9 (2021),HP Spectre x360 14, Dell Inspiron, Dell Precision 5560, Lenovo IdeaPad 3 14" />
+    <meta name = "description" content = "There are so many Laptops in every category, from ultrabook to gaming laptops. Suggestmee reviewed hundreds of laptops to help you find the best laptop." />
+    <meta name = "author" content = "Suggestmee" />
+    <meta http-equiv = "Content-Type" content = "text/html; charset = UTF-8" />
     <link rel="stylesheet" href="./style.css" />
     <link
       rel="stylesheet"
