file naming changes

--- a/gamming_laptops.html
+++ b/gamming_laptops.html
@@ -22,13 +22,13 @@
     <div class="container">
       <div class="navbar">
         <div class="logo">
-          <a href="Home.html"
+          <a href="/"
             ><img src="./images/logo.png" alt="" width="125px"
           /></a>
         </div>
         <nav>
           <ul id="menuItems">
-            <li><a href="Home.html">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="mailto:suggestme60@gmail.com?" target="_blank">Contact Us</a></li>
           </ul>
         </nav>
@@ -43,85 +43,84 @@
     </div>
 
     <!-- -----single products details 1 ----- -->
+
     <div class="small-container single-details">
       <div class="row">
         <div class="col-2">
-          <img src="./images/I5/gallery-9.jpg" width="100%" id="productImg3" />
+          <img
+            src="./images/dell i5 g/gallery-1.jpg"
+            width="100%"
+            id="productImg"
+          />
           <div class="small-img-row">
             <div class="small-img-col">
               <img
-                src="./images/I5/gallery-9.jpg"
+                src="./images/dell i5 g/gallery-1.jpg"
                 width="100%"
                 alt=""
-                class="smallImg3"
+                class="smallImg"
               />
             </div>
             <div class="small-img-col">
               <img
-                src="./images/I5/gallery-10.jpg"
+                src="./images/dell i5 g/gallery-2.jpg"
                 width="100%"
                 alt=""
-                class="smallImg3"
+                class="smallImg"
               />
             </div>
             <div class="small-img-col">
               <img
-                src="./images/I5/gallery-11.jpg"
+                src="./images/dell i5 g/gallery-3.jpg"
                 width="100%"
                 alt=""
-                class="smallImg3"
+                class="smallImg"
               />
             </div>
             <div class="small-img-col">
               <img
-                src="./images/I5/gallery-12.jpg"
+                src="./images/dell i5 g/gallery-4.jpg"
                 width="100%"
                 alt=""
-                class="smallImg3"
+                class="smallImg"
               />
             </div>
           </div>
         </div>
         <div class="col-2">
-          <h1>Inspiron 14 Laptop</h1>
+          <h1>G15 Gaming Laptop</h1>
           <h3>Product Details</h3>
           <br />
           <p>
-            <b>Processor :</b> 11th Generation Intel® Core™ i5-11320H (8 MB
-            cache, 4 cores, 8 threads, up to 4.50 GHz)
+            <p><b>Processor :</b>10th Generation Intel® Core™ i5-10200H (8 MB cache, 4
+              cores, 8 threads, up to 4.10 GHz) </p> 
+            <p><b>Operating System :</b>Windows 10 Home
+              Single Language, English</p> 
+            <p><b>videocard :</b> NVIDIA® GeForce RTX™ 3050, 4 GB GDDR6</p>
+            <p><b>RAM :</b>16 GB, 2 x 8 GB, DDR4, 2933 MHz</p>  
+            <p><b>Storage :</b> 512 GB, M.2, PCIe NVMe, SSD</p> 
+            <p><b>Display :</b> 15.6 inch FHD (1920 x 1080) 120Hz 250 nits
+              WVA Anti- Glare LED Backlit Narrow Border Display</p> 
+            <p><b>price :</b>79,990.01</p> 
           </p>
-          <p>
-            <b>Operating System</b> Windows 11 Home Single Language, English
-          </p>
-          <p><b>videocard :</b> Intel® Iris® Xe Graphics</p>
-          <p><b>RAM :</b>8 GB, 2 x 4 GB, DDR4, 3200 MHz</p>
-          <p><b>Storage :</b> 512 GB, M.2, PCIe NVMe, SSD</p>
-          <p>
-            <b>Display :</b>14.0-inch FHD (1920 x 1080) Anti-Glare LED Backlit
-            Non-Touch Narrow Border WVA Display
-          </p>
-          <p><b>MRP :</b>62490</p>
-
           <a
-            href="https://www.dell.com/en-in/shop/laptops-2-in-1-pcs/inspiron-14-laptop/spd/inspiron-14-5410-laptop/bts-icc-c782512win8"
-            class="btn"
-            target="_blank"
+            href="https://www.dell.com/en-in/shop/gaming-and-games/g15-gaming-laptop/spd/g-series-15-5510-laptop/d560537win9b#features_section
+            " class="btn" target="_blank"
             >BUY</a
           >
         </div>
       </div>
     </div>
-
     <!-- -----single products details 2 ----- -->
 
     <div class="small-container single-details">
       <div class="row">
         <div class="col-2">
-          <img src="./images/I5/gallery-5.jpg" width="100%" id="productImg2" />
+          <img src="./images/I7/gallery-5.jpg" width="100%" id="productImg2" />
           <div class="small-img-row">
             <div class="small-img-col">
               <img
-                src="./images/I5/gallery-5.jpg"
+                src="./images/I7/gallery-5.jpg"
                 width="100%"
                 alt=""
                 class="smallImg2"
@@ -129,7 +128,7 @@
             </div>
             <div class="small-img-col">
               <img
-                src="./images/I5/gallery-6.jpg"
+                src="./images/I7/gallery-6.jpg"
                 width="100%"
                 alt=""
                 class="smallImg2"
@@ -137,7 +136,7 @@
             </div>
             <div class="small-img-col">
               <img
-                src="./images/I5/gallery-7.jpg"
+                src="./images/I7/gallery-7.jpg"
                 width="100%"
                 alt=""
                 class="smallImg2"
@@ -145,7 +144,7 @@
             </div>
             <div class="small-img-col">
               <img
-                src="./images/I5/gallery-8.jpg"
+                src="./images/I7/gallery-8.jpg"
                 width="100%"
                 alt=""
                 class="smallImg2"
@@ -155,40 +154,39 @@
         </div>
         <div class="col-2">
           <p>Home /</p>
-          <h1>IdeaPad Slim 5i (15, Intel)</h1>
+          <h1>Thinkpad E14 11th Gen (Intel)</h1>
           <h3>Product Details</h3>
           <br />
           <p>
-            <b>Processor :</b> 11th Generation Intel® Core™ i5-1135G7 Processor
-            (4 Cores / 8 Threads, 2.40 GHz, up to 4.20 GHz with Turbo Boost, 8
-            MB Cache)
+            <b>Processor :</b> AMD Ryzen™ 7 5800H Processor (8 Cores / 16
+            Threads, 3.20 GHz, up to 4.40 GHz with Max Boost, 4 MB Cache L2 / 16
+            MB Cache L3)
           </p>
           <p><b>Operating System :</b> Windows 11 Home 64</p>
           <p>
-            <b>Display Type :</b> 39.62cms (15.6) FHD (1920x1080) IPS 300nits
-            Anti-glare 45% NTSC
+            <b>Display Type :</b> 39.62cms (15.6) WQHD (2560x1440) IPS 300nits
+            Anti-glare 165Hz 100% sRGB Dolby Vision Free-Sync G-Sync DC Dimmer
           </p>
-          <p><b>RAM :</b> 16 GB Soldered DDR4 3200MHz</p>
-          <p><b>Hard Drive :</b> 512 GB M.2 2280 SSD</p>
-          <p><b>MRP :</b> 64490</p>
+          <p><b>RAM :</b> 8 GB SO-DIMM DDR4 3200MHz</p>
+          <p><b>Hard Drive :</b> 1 TB M.2 2280 SSD</p>
+          <p><b>MRP :</b> 108990</p>
           <a
-            href="https://www.lenovo.com/in/en/laptops/ideapad/s-series/IdeaPad-5i-15IIL05/p/88IPS501391"
-            class="btn"
-            target="_blank"
+            href="https://www.lenovo.com/in/en/laptops/legion-laptops/legion-5-series/Legion-5-15ACH6H/p/88GMY501582?r"
+            class="btn" target="_blank"
             >BUY</a
           >
         </div>
       </div>
     </div>
-    <!-- -----single products details 3 ----- -->
+    <!-- -----single products details 3 ----- --><!-----
     <div class="small-container single-details">
       <div class="row">
         <div class="col-2">
-          <img src="./images/I5/gallery-1.jpg" width="100%" id="productImg" />
+          <img src="./images/gallery-1.jpg" width="100%" id="productImg" />
           <div class="small-img-row">
             <div class="small-img-col">
               <img
-                src="./images/I5/gallery-1.jpg"
+                src="./images/gallery-1.jpg"
                 width="100%"
                 alt=""
                 class="smallImg"
@@ -196,7 +194,7 @@
             </div>
             <div class="small-img-col">
               <img
-                src="./images/I5/gallery-2.jpg"
+                src="./images/gallery-2.jpg"
                 width="100%"
                 alt=""
                 class="smallImg"
@@ -204,7 +202,7 @@
             </div>
             <div class="small-img-col">
               <img
-                src="./images/I5/gallery-3.jpg"
+                src="./images/gallery-3.jpg"
                 width="100%"
                 alt=""
                 class="smallImg"
@@ -212,7 +210,7 @@
             </div>
             <div class="small-img-col">
               <img
-                src="./images/I5/gallery-4.jpg"
+                src="./images/gallery-4.jpg"
                 width="100%"
                 alt=""
                 class="smallImg"
@@ -221,26 +219,19 @@
           </div>
         </div>
         <div class="col-2">
-          <h1>HP Pavilion Laptop 14-dv1002TU</h1>
-          <h3>Product Details</h3>
+          <p>Home /</p>
+          <h1>Red Printed T-shirt by HRX</h1>
+          <h3>Product Details <i class="fa fa-indent"></i></h3>
           <br />
-          <p><b>Processor : </b>11th Generation Intel® Core™ i5 processor</p>
-          <p><b>Operating System :</b> Windows 11 Home</p>
-          <p><b>Storage : </b>512 GB PCIe® NVMe™ M.2 SSD</p>
-          <p><b>Display :</b> FHD IPS 35.56 cm (14)</p>
-          <p><b>Graphics : </b>Intel Iris Xe</p>
-          <p><b>RAM :</b> 16GB</p>
-          <p><b>MRP :</b> 67999</p>
-
-          <a
-            href="https://www.hp.com/in-en/shop/hp-pavilion-laptop-14-dv1002tu-50n48pa.html"
-            class="btn"
-            target="_blank"
-            >BUY</a
-          >
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+            nesciunt quae consequuntur, et ea quo, ad in minima aliquam vel vero
+            nulla repudiandae dicta, unde quia quibusdam distinctio possimus
+            enim reprehenderit numquam porro delectus! Earum!
+          </p>
         </div>
       </div>
-    </div>
+    </div>------>
     <!-- -----title----- -->
     <!--------
     <div class="small-container">
@@ -381,7 +372,7 @@
                 <li><a href="#">Instagram</a></li>
                 <li><a href="#">Youtube</a></li>
               </ul>
-            </div>---->
+            </div>--->
           </div>
           <hr />
         </div>
@@ -436,23 +427,6 @@
       };
       smallImg2[3].onclick = function () {
         productImg2.src = smallImg2[3].src;
-      };
-    </script>
-    <script>
-      var productImg3 = document.getElementById("productImg3");
-      var smallImg3 = document.getElementsByClassName("smallImg3");
-
-      smallImg3[0].onclick = function () {
-        productImg3.src = smallImg3[0].src;
-      };
-      smallImg3[1].onclick = function () {
-        productImg3.src = smallImg3[1].src;
-      };
-      smallImg3[2].onclick = function () {
-        productImg3.src = smallImg3[2].src;
-      };
-      smallImg3[3].onclick = function () {
-        productImg3.src = smallImg3[3].src;
       };
     </script>
   </body>
