--- a/programming_laptops.html
+++ b/programming_laptops.html
@@ -5,10 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SUGGESTMEE</title>
-    <meta name = "keywords" content = "Computers & Electronics, Laptops, Dell XPS, Acer Predator Triton 300 SE, Alienware, Apple MacBook Air,Lenovo ThinkPad X1 Carbon Gen 9 (2021),HP Spectre x360 14, Dell Inspiron, Dell Precision 5560, Lenovo IdeaPad 3 14" />
-    <meta name = "description" content = "There are so many Laptops in every category, from ultrabook to gaming laptops. Suggestmee reviewed hundreds of laptops to help you find the best laptop." />
-    <meta name = "author" content = "Suggestmee" />
-    <meta http-equiv = "Content-Type" content = "text/html; charset = UTF-8" />
+    <meta
+      name="keywords"
+      content="Computers & Electronics, Laptops, Dell XPS, Acer Predator Triton 300 SE, Alienware, Apple MacBook Air,Lenovo ThinkPad X1 Carbon Gen 9 (2021),HP Spectre x360 14, Dell Inspiron, Dell Precision 5560, Lenovo IdeaPad 3 14"
+    />
+    <meta
+      name="description"
+      content="There are so many Laptops in every category, from ultrabook to gaming laptops. Suggestmee reviewed hundreds of laptops to help you find the best laptop."
+    />
+    <meta name="author" content="Suggestmee" />
+    <meta http-equiv="Content-Type" content="text/html; charset = UTF-8" />
     <link rel="stylesheet" href="./style.css" />
     <link
       rel="stylesheet"
@@ -22,15 +28,15 @@
     <div class="container">
       <div class="navbar">
         <div class="logo">
-          <a href="Home.html"
-            ><img src="./images/logo.png" alt="" width="125px"
-          /></a>
+          <a href="/"><img src="./images/logo.png" alt="" width="125px" /></a>
         </div>
         <nav>
           <ul id="menuItems">
-            <li><a href="Home.html">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li>
-              <a href="mailto:suggestme60@gmail.com?" target="_blank">Contact Us </a>
+              <a href="mailto:suggestme60@gmail.com?" target="_blank"
+                >Contact Us</a
+              >
             </li>
           </ul>
         </nav>
@@ -45,60 +51,67 @@
     </div>
 
     <!-- -----single products details 1 ----- -->
-
     <div class="small-container single-details">
       <div class="row">
         <div class="col-2">
-          <img src="./images/I3/gallery-1.jpg" width="100%" id="productImg" />
+          <img src="./images/I5/gallery-9.jpg" width="100%" id="productImg3" />
           <div class="small-img-row">
             <div class="small-img-col">
               <img
-                src="./images/I3/gallery-1.jpg"
+                src="./images/I5/gallery-9.jpg"
                 width="100%"
                 alt=""
-                class="smallImg"
+                class="smallImg3"
               />
             </div>
             <div class="small-img-col">
               <img
-                src="./images/I3/gallery-2.jpg"
+                src="./images/I5/gallery-10.jpg"
                 width="100%"
                 alt=""
-                class="smallImg"
+                class="smallImg3"
               />
             </div>
             <div class="small-img-col">
               <img
-                src="./images/I3/gallery-3.jpg"
+                src="./images/I5/gallery-11.jpg"
                 width="100%"
                 alt=""
-                class="smallImg"
+                class="smallImg3"
               />
             </div>
             <div class="small-img-col">
               <img
-                src="./images/I3/gallery-4.jpg"
+                src="./images/I5/gallery-12.jpg"
                 width="100%"
                 alt=""
-                class="smallImg"
+                class="smallImg3"
               />
             </div>
           </div>
         </div>
         <div class="col-2">
-          <h1>HP Laptop 15s-fq2626TU</h1>
+          <h1>Inspiron 14 Laptop</h1>
           <h3>Product Details</h3>
           <br />
-          <p><b>Processor :</b> 11th Generation Intel® Core™ i3 processor</p>
-          <p><b>Operating System :</b> Windows 11 Home</p>
-          <p><b>Storage : </b>256 GB PCIe® NVMe™ M.2 SSD</p>
-          <p><b>Display :</b> 39.62 cm (15.6) FHD</p>
-          <p><b>Graphics :</b>Intel UHD Graphics</p>
-          <p><b>RAM : </b>8 GB DDR4-2666 MHz RAM (1 x 8 GB)</p>
-          <p><b>MRP : </b>42499</p>
+          <p>
+            <b>Processor :</b> 11th Generation Intel® Core™ i5-11320H (8 MB
+            cache, 4 cores, 8 threads, up to 4.50 GHz)
+          </p>
+          <p>
+            <b>Operating System</b> Windows 11 Home Single Language, English
+          </p>
+          <p><b>videocard :</b> Intel® Iris® Xe Graphics</p>
+          <p><b>RAM :</b>8 GB, 2 x 4 GB, DDR4, 3200 MHz</p>
+          <p><b>Storage :</b> 512 GB, M.2, PCIe NVMe, SSD</p>
+          <p>
+            <b>Display :</b>14.0-inch FHD (1920 x 1080) Anti-Glare LED Backlit
+            Non-Touch Narrow Border WVA Display
+          </p>
+          <p><b>MRP :</b>62490</p>
 
           <a
-            href="https://www.hp.com/in-en/shop/laptops-tablets/hp-laptop-15s-fq2626tu-536c2pa.html"
+            href="https://www.dell.com/en-in/shop/laptops-2-in-1-pcs/inspiron-14-laptop/spd/inspiron-14-5410-laptop/bts-icc-c782512win8"
             class="btn"
             target="_blank"
             >BUY</a
@@ -106,67 +119,68 @@
         </div>
       </div>
     </div>
+
     <!-- -----single products details 2 ----- -->
 
     <div class="small-container single-details">
       <div class="row">
         <div class="col-2">
-          <img src="./images/I3/gallery-5.jpg" width="100%" id="productImg1" />
+          <img src="./images/I5/gallery-5.jpg" width="100%" id="productImg2" />
           <div class="small-img-row">
             <div class="small-img-col">
               <img
-                src="./images/I3/gallery-5.jpg"
+                src="./images/I5/gallery-5.jpg"
                 width="100%"
                 alt=""
-                class="smallImg1"
+                class="smallImg2"
               />
             </div>
             <div class="small-img-col">
               <img
-                src="./images/I3/gallery-6.jpg"
+                src="./images/I5/gallery-6.jpg"
                 width="100%"
                 alt=""
-                class="smallImg1"
+                class="smallImg2"
               />
             </div>
             <div class="small-img-col">
               <img
-                src="./images/I3/gallery-7.jpg"
+                src="./images/I5/gallery-7.jpg"
                 width="100%"
                 alt=""
-                class="smallImg1"
+                class="smallImg2"
               />
             </div>
             <div class="small-img-col">
               <img
-                src="./images/I3/gallery-8.jpg"
+                src="./images/I5/gallery-8.jpg"
                 width="100%"
                 alt=""
-                class="smallImg1"
+                class="smallImg2"
               />
             </div>
           </div>
         </div>
         <div class="col-2">
           <p>Home /</p>
-          <h1>Thinkpad E14 11th Gen (Intel)</h1>
+          <h1>IdeaPad Slim 5i (15, Intel)</h1>
           <h3>Product Details</h3>
           <br />
           <p>
-            <b>Processor :</b> 11th Generation Intel® Core™ i3-1115G4 Processor
-            (2 Cores / 4 Threads, 3.00 GHz, up to 4.10 GHz with Turbo Boost, 6
+            <b>Processor :</b> 11th Generation Intel® Core™ i5-1135G7 Processor
+            (4 Cores / 8 Threads, 2.40 GHz, up to 4.20 GHz with Turbo Boost, 8
             MB Cache)
           </p>
-          <p><b>Operating System :</b> Windows 11 Home Single Language 64</p>
+          <p><b>Operating System :</b> Windows 11 Home 64</p>
           <p>
-            <b>Display Type :</b> 35.56cms (14.0) FHD (1920x1080) TN 220 nits
-            Anti-glare LED Backlight Narrow Bezel Non-Touch
+            <b>Display Type :</b> 39.62cms (15.6) FHD (1920x1080) IPS 300nits
+            Anti-glare 45% NTSC
           </p>
-          <p><b>RAM :</b> 8 GB SO-DIMM DDR4 3200MHz</p>
-          <p><b>Hard Drive :</b> 256 GB M.2 2242 SSD</p>
-          <p><b>MRP :</b> 49990</p>
+          <p><b>RAM :</b> 16 GB Soldered DDR4 3200MHz</p>
+          <p><b>Hard Drive :</b> 512 GB M.2 2280 SSD</p>
+          <p><b>MRP :</b> 64490</p>
           <a
-            href="https://www.lenovo.com/in/en/laptops/thinkpad/thinkpad-e-series/E14-G2/p/20TAS12L00"
+            href="https://www.lenovo.com/in/en/laptops/ideapad/s-series/IdeaPad-5i-15IIL05/p/88IPS501391"
             class="btn"
             target="_blank"
             >BUY</a
@@ -174,15 +188,15 @@
         </div>
       </div>
     </div>
-    <!-- -----single products details 3 ----- --><!-----
+    <!-- -----single products details 3 ----- -->
     <div class="small-container single-details">
       <div class="row">
         <div class="col-2">
-          <img src="./images/gallery-1.jpg" width="100%" id="productImg" />
+          <img src="./images/I5/gallery-1.jpg" width="100%" id="productImg" />
           <div class="small-img-row">
             <div class="small-img-col">
               <img
-                src="./images/gallery-1.jpg"
+                src="./images/I5/gallery-1.jpg"
                 width="100%"
                 alt=""
                 class="smallImg"
@@ -190,7 +204,7 @@
             </div>
             <div class="small-img-col">
               <img
-                src="./images/gallery-2.jpg"
+                src="./images/I5/gallery-2.jpg"
                 width="100%"
                 alt=""
                 class="smallImg"
@@ -198,7 +212,7 @@
             </div>
             <div class="small-img-col">
               <img
-                src="./images/gallery-3.jpg"
+                src="./images/I5/gallery-3.jpg"
                 width="100%"
                 alt=""
                 class="smallImg"
@@ -206,7 +220,7 @@
             </div>
             <div class="small-img-col">
               <img
-                src="./images/gallery-4.jpg"
+                src="./images/I5/gallery-4.jpg"
                 width="100%"
                 alt=""
                 class="smallImg"
@@ -215,19 +229,26 @@
           </div>
         </div>
         <div class="col-2">
-          <p>Home /</p>
-          <h1>Red Printed T-shirt by HRX</h1>
-          <h3>Product Details <i class="fa fa-indent"></i></h3>
+          <h1>HP Pavilion Laptop 14-dv1002TU</h1>
+          <h3>Product Details</h3>
           <br />
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
-            nesciunt quae consequuntur, et ea quo, ad in minima aliquam vel vero
-            nulla repudiandae dicta, unde quia quibusdam distinctio possimus
-            enim reprehenderit numquam porro delectus! Earum!
-          </p>
+          <p><b>Processor : </b>11th Generation Intel® Core™ i5 processor</p>
+          <p><b>Operating System :</b> Windows 11 Home</p>
+          <p><b>Storage : </b>512 GB PCIe® NVMe™ M.2 SSD</p>
+          <p><b>Display :</b> FHD IPS 35.56 cm (14)</p>
+          <p><b>Graphics : </b>Intel Iris Xe</p>
+          <p><b>RAM :</b> 16GB</p>
+          <p><b>MRP :</b> 67999</p>
+
+          <a
+            href="https://www.hp.com/in-en/shop/hp-pavilion-laptop-14-dv1002tu-50n48pa.html"
+            class="btn"
+            target="_blank"
+            >BUY</a
+          >
         </div>
       </div>
-    </div>------>
+    </div>
     <!-- -----title----- -->
     <!--------
     <div class="small-container">
@@ -360,7 +381,7 @@
               <img src="./images/logo.png" alt="" />
               <p>Make your buying decision with us</p>
             </div>
-            <!----<div class="footer-col-4">
+            <!---<div class="footer-col-4">
               <h3>Follow Us</h3>
               <ul>
                 <li><a href="#">Facebook</a></li>
@@ -368,7 +389,7 @@
                 <li><a href="#">Instagram</a></li>
                 <li><a href="#">Youtube</a></li>
               </ul>
-            </div>--->
+            </div>---->
           </div>
           <hr />
         </div>
@@ -409,20 +430,37 @@
       };
     </script>
     <script>
-      var productImg1 = document.getElementById("productImg1");
-      var smallImg1 = document.getElementsByClassName("smallImg1");
+      var productImg2 = document.getElementById("productImg2");
+      var smallImg2 = document.getElementsByClassName("smallImg2");
 
-      smallImg1[0].onclick = function () {
-        productImg1.src = smallImg1[0].src;
+      smallImg2[0].onclick = function () {
+        productImg2.src = smallImg2[0].src;
       };
-      smallImg1[1].onclick = function () {
-        productImg1.src = smallImg1[1].src;
+      smallImg2[1].onclick = function () {
+        productImg2.src = smallImg2[1].src;
       };
-      smallImg1[2].onclick = function () {
-        productImg1.src = smallImg1[2].src;
+      smallImg2[2].onclick = function () {
+        productImg2.src = smallImg2[2].src;
       };
-      smallImg1[3].onclick = function () {
-        productImg1.src = smallImg1[3].src;
+      smallImg2[3].onclick = function () {
+        productImg2.src = smallImg2[3].src;
+      };
+    </script>
+    <script>
+      var productImg3 = document.getElementById("productImg3");
+      var smallImg3 = document.getElementsByClassName("smallImg3");
+
+      smallImg3[0].onclick = function () {
+        productImg3.src = smallImg3[0].src;
+      };
+      smallImg3[1].onclick = function () {
+        productImg3.src = smallImg3[1].src;
+      };
+      smallImg3[2].onclick = function () {
+        productImg3.src = smallImg3[2].src;
+      };
+      smallImg3[3].onclick = function () {
+        productImg3.src = smallImg3[3].src;
       };
     </script>
   </body>
