--- a/basic_use_laptops.html
+++ b/basic_use_laptops.html
@@ -5,10 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SUGGESTMEE</title>
-    <meta name = "keywords" content = "Computers & Electronics, Laptops, Dell XPS, Acer Predator Triton 300 SE, Alienware, Apple MacBook Air,Lenovo ThinkPad X1 Carbon Gen 9 (2021),HP Spectre x360 14, Dell Inspiron, Dell Precision 5560, Lenovo IdeaPad 3 14" />
-    <meta name = "description" content = "There are so many Laptops in every category, from ultrabook to gaming laptops. Suggestmee reviewed hundreds of laptops to help you find the best laptop." />
-    <meta name = "author" content = "Suggestmee" />
-    <meta http-equiv = "Content-Type" content = "text/html; charset = UTF-8" />
+    <meta
+      name="keywords"
+      content="Computers & Electronics, Laptops, Dell XPS, Acer Predator Triton 300 SE, Alienware, Apple MacBook Air,Lenovo ThinkPad X1 Carbon Gen 9 (2021),HP Spectre x360 14, Dell Inspiron, Dell Precision 5560, Lenovo IdeaPad 3 14"
+    />
+    <meta
+      name="description"
+      content="There are so many Laptops in every category, from ultrabook to gaming laptops. Suggestmee reviewed hundreds of laptops to help you find the best laptop."
+    />
+    <meta name="author" content="Suggestmee" />
+    <meta http-equiv="Content-Type" content="text/html; charset = UTF-8" />
     <link rel="stylesheet" href="./style.css" />
     <link
       rel="stylesheet"
@@ -22,14 +28,16 @@
     <div class="container">
       <div class="navbar">
         <div class="logo">
-          <a href="Home.html"
-            ><img src="./images/logo.png" alt="" width="125px"
-          /></a>
+          <a href="/"><img src="./images/logo.png" alt="" width="125px" /></a>
         </div>
         <nav>
           <ul id="menuItems">
-            <li><a href="Home.html">Home</a></li>
-            <li><a href="mailto:suggestme60@gmail.com?" target="_blank">Contact Us</a></li>
+            <li><a href="/">Home</a></li>
+            <li>
+              <a href="mailto:suggestme60@gmail.com?" target="_blank"
+                >Contact Us
+              </a>
+            </li>
           </ul>
         </nav>
 
@@ -47,15 +55,11 @@
     <div class="small-container single-details">
       <div class="row">
         <div class="col-2">
-          <img
-            src="./images/dell i5 g/gallery-1.jpg"
-            width="100%"
-            id="productImg"
-          />
+          <img src="./images/I3/gallery-1.jpg" width="100%" id="productImg" />
           <div class="small-img-row">
             <div class="small-img-col">
               <img
-                src="./images/dell i5 g/gallery-1.jpg"
+                src="./images/I3/gallery-1.jpg"
                 width="100%"
                 alt=""
                 class="smallImg"
@@ -63,7 +67,7 @@
             </div>
             <div class="small-img-col">
               <img
-                src="./images/dell i5 g/gallery-2.jpg"
+                src="./images/I3/gallery-2.jpg"
                 width="100%"
                 alt=""
                 class="smallImg"
@@ -71,7 +75,7 @@
             </div>
             <div class="small-img-col">
               <img
-                src="./images/dell i5 g/gallery-3.jpg"
+                src="./images/I3/gallery-3.jpg"
                 width="100%"
                 alt=""
                 class="smallImg"
@@ -79,7 +83,7 @@
             </div>
             <div class="small-img-col">
               <img
-                src="./images/dell i5 g/gallery-4.jpg"
+                src="./images/I3/gallery-4.jpg"
                 width="100%"
                 alt=""
                 class="smallImg"
@@ -88,24 +92,21 @@
           </div>
         </div>
         <div class="col-2">
-          <h1>G15 Gaming Laptop</h1>
+          <h1>HP Laptop 15s-fq2626TU</h1>
           <h3>Product Details</h3>
           <br />
-          <p>
-            <p><b>Processor :</b>10th Generation Intel® Core™ i5-10200H (8 MB cache, 4
-              cores, 8 threads, up to 4.10 GHz) </p> 
-            <p><b>Operating System :</b>Windows 10 Home
-              Single Language, English</p> 
-            <p><b>videocard :</b> NVIDIA® GeForce RTX™ 3050, 4 GB GDDR6</p>
-            <p><b>RAM :</b>16 GB, 2 x 8 GB, DDR4, 2933 MHz</p>  
-            <p><b>Storage :</b> 512 GB, M.2, PCIe NVMe, SSD</p> 
-            <p><b>Display :</b> 15.6 inch FHD (1920 x 1080) 120Hz 250 nits
-              WVA Anti- Glare LED Backlit Narrow Border Display</p> 
-            <p><b>price :</b>79,990.01</p> 
-          </p>
+          <p><b>Processor :</b> 11th Generation Intel® Core™ i3 processor</p>
+          <p><b>Operating System :</b> Windows 11 Home</p>
+          <p><b>Storage : </b>256 GB PCIe® NVMe™ M.2 SSD</p>
+          <p><b>Display :</b> 39.62 cm (15.6) FHD</p>
+          <p><b>Graphics :</b>Intel UHD Graphics</p>
+          <p><b>RAM : </b>8 GB DDR4-2666 MHz RAM (1 x 8 GB)</p>
+          <p><b>MRP : </b>42499</p>
+
           <a
-            href="https://www.dell.com/en-in/shop/gaming-and-games/g15-gaming-laptop/spd/g-series-15-5510-laptop/d560537win9b#features_section
-            " class="btn" target="_blank"
+            href="https://www.hp.com/in-en/shop/laptops-tablets/hp-laptop-15s-fq2626tu-536c2pa.html"
+            class="btn"
+            target="_blank"
             >BUY</a
           >
         </div>
@@ -116,38 +117,38 @@
     <div class="small-container single-details">
       <div class="row">
         <div class="col-2">
-          <img src="./images/I7/gallery-5.jpg" width="100%" id="productImg2" />
+          <img src="./images/I3/gallery-5.jpg" width="100%" id="productImg1" />
           <div class="small-img-row">
             <div class="small-img-col">
               <img
-                src="./images/I7/gallery-5.jpg"
+                src="./images/I3/gallery-5.jpg"
                 width="100%"
                 alt=""
-                class="smallImg2"
+                class="smallImg1"
               />
             </div>
             <div class="small-img-col">
               <img
-                src="./images/I7/gallery-6.jpg"
+                src="./images/I3/gallery-6.jpg"
                 width="100%"
                 alt=""
-                class="smallImg2"
+                class="smallImg1"
               />
             </div>
             <div class="small-img-col">
               <img
-                src="./images/I7/gallery-7.jpg"
+                src="./images/I3/gallery-7.jpg"
                 width="100%"
                 alt=""
-                class="smallImg2"
+                class="smallImg1"
               />
             </div>
             <div class="small-img-col">
               <img
-                src="./images/I7/gallery-8.jpg"
+                src="./images/I3/gallery-8.jpg"
                 width="100%"
                 alt=""
-                class="smallImg2"
+                class="smallImg1"
               />
             </div>
           </div>
@@ -158,21 +159,22 @@
           <h3>Product Details</h3>
           <br />
           <p>
-            <b>Processor :</b> AMD Ryzen™ 7 5800H Processor (8 Cores / 16
-            Threads, 3.20 GHz, up to 4.40 GHz with Max Boost, 4 MB Cache L2 / 16
-            MB Cache L3)
+            <b>Processor :</b> 11th Generation Intel® Core™ i3-1115G4 Processor
+            (2 Cores / 4 Threads, 3.00 GHz, up to 4.10 GHz with Turbo Boost, 6
+            MB Cache)
           </p>
-          <p><b>Operating System :</b> Windows 11 Home 64</p>
+          <p><b>Operating System :</b> Windows 11 Home Single Language 64</p>
           <p>
-            <b>Display Type :</b> 39.62cms (15.6) WQHD (2560x1440) IPS 300nits
-            Anti-glare 165Hz 100% sRGB Dolby Vision Free-Sync G-Sync DC Dimmer
+            <b>Display Type :</b> 35.56cms (14.0) FHD (1920x1080) TN 220 nits
+            Anti-glare LED Backlight Narrow Bezel Non-Touch
           </p>
           <p><b>RAM :</b> 8 GB SO-DIMM DDR4 3200MHz</p>
-          <p><b>Hard Drive :</b> 1 TB M.2 2280 SSD</p>
-          <p><b>MRP :</b> 108990</p>
+          <p><b>Hard Drive :</b> 256 GB M.2 2242 SSD</p>
+          <p><b>MRP :</b> 49990</p>
           <a
-            href="https://www.lenovo.com/in/en/laptops/legion-laptops/legion-5-series/Legion-5-15ACH6H/p/88GMY501582?r"
-            class="btn" target="_blank"
+            href="https://www.lenovo.com/in/en/laptops/thinkpad/thinkpad-e-series/E14-G2/p/20TAS12L00"
+            class="btn"
+            target="_blank"
             >BUY</a
           >
         </div>
@@ -364,7 +366,7 @@
               <img src="./images/logo.png" alt="" />
               <p>Make your buying decision with us</p>
             </div>
-            <!---<div class="footer-col-4">
+            <!----<div class="footer-col-4">
               <h3>Follow Us</h3>
               <ul>
                 <li><a href="#">Facebook</a></li>
@@ -413,20 +415,20 @@
       };
     </script>
     <script>
-      var productImg2 = document.getElementById("productImg2");
-      var smallImg2 = document.getElementsByClassName("smallImg2");
+      var productImg1 = document.getElementById("productImg1");
+      var smallImg1 = document.getElementsByClassName("smallImg1");
 
-      smallImg2[0].onclick = function () {
-        productImg2.src = smallImg2[0].src;
+      smallImg1[0].onclick = function () {
+        productImg1.src = smallImg1[0].src;
       };
-      smallImg2[1].onclick = function () {
-        productImg2.src = smallImg2[1].src;
+      smallImg1[1].onclick = function () {
+        productImg1.src = smallImg1[1].src;
       };
-      smallImg2[2].onclick = function () {
-        productImg2.src = smallImg2[2].src;
+      smallImg1[2].onclick = function () {
+        productImg1.src = smallImg1[2].src;
       };
-      smallImg2[3].onclick = function () {
-        productImg2.src = smallImg2[3].src;
+      smallImg1[3].onclick = function () {
+        productImg1.src = smallImg1[3].src;
       };
     </script>
   </body>
