title,discription,clickable links

--- a/index.html
+++ b/index.html
@@ -4,17 +4,33 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SUGGESTMEE</title>
+    <title>SUGGESTMEE : Electronic Appliance Advice</title>
+    <!---icon image-->
+    <link rel="suggestmee-icon" href="./images/fevicon_logo.png" />
+    <!---Meta Tags-->
     <meta
       name="keywords"
-      content="Computers & Electronics, Laptops, Dell XPS, Acer Predator Triton 300 SE, Alienware, Apple MacBook Air,Lenovo ThinkPad X1 Carbon Gen 9 (2021),HP Spectre x360 14, Dell Inspiron, Dell Precision 5560, Lenovo IdeaPad 3 14"
+      content="best laptops,2022,programming laptops,gaming laptops,basic purpose laptops,core i5,i3,i7,Ram,USB Type-C,Higher-Resolution Screens,OLED Displays,Nvidia Graphics,display full hd, daily use, Laptops, Dell XPS Alienware,Lenovo ThinkPad X1 Carbon Gen 9 (2022),HP Spectre, Dell Inspiron, Dell Precision, Lenovo IdeaPad"
     />
     <meta
       name="description"
-      content="There are so many Laptops in every category, from ultrabook to gaming laptops. Suggestmee reviewed hundreds of laptops to help you find the best laptop."
+      content="There are so many Laptops in every category, from Programming laptops to gaming laptops. Suggestmee reviewed hundreds of laptops to help you find the best laptop."
     />
     <meta name="author" content="Suggestmee" />
     <meta http-equiv="Content-Type" content="text/html; charset = UTF-8" />
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://suggestmee.github.io/" />
+    <meta
+      property="og:title"
+      content="suggestmee : Electronic Appliance Advice"
+    />
+    <meta property="og:description" content="Helps to choose Best from Rest" />
+    <meta
+      property="og:image"
+      itemprop="image"
+      content="./images/whatsapp_logo.png"
+    />
     <link rel="stylesheet" href="./style.css" />
     <link
       rel="stylesheet"
@@ -28,7 +44,9 @@
       <div class="container">
         <div class="navbar">
           <div class="logo">
-            <a href="/"><img src="./images/logo.png" alt="" width="125px" /></a>
+            <a href="/"
+              ><img src="./images/logo.png" alt="suggestmee logo" width="125px"
+            /></a>
           </div>
           <nav>
             <ul id="menuItems">
@@ -44,7 +62,7 @@
             src="./images/menu.png"
             class="menu-icon"
             onclick="menutoggle()"
-            alt=""
+            alt="menu logo"
           />
         </div>
         <div class="row">
